test/errhandling/psahabu/top-notry.good
should not continue
top-notry.chpl:5: error: uncaught error
