test/errhandling/psahabu/top-notry.chpl
use ThrowError;

writeln("should not continue");

throwAnError();

writeln("fail: continued");
